[fixed] UI + [feat] Responsive on tablet

--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -23,6 +23,6 @@ body {
 
 .row{
   display: flex;
-  max-width: 1200px;
-  margin: auto;
+  flex-wrap: wrap;
+  justify-content: center;
 }
