--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -13,7 +13,7 @@ header {
   margin: 0;
   position: fixed;
   background-color: white;
-  z-index: 1;
+  z-index: 3;
 }
 
 .header__logo {
@@ -33,23 +33,6 @@ header {
   font-size: 2rem;
   font-weight: 800;
   padding-left: 8px;
-}
-
-.header__service {
-  font-size: 1.6rem;
-  cursor: pointer;
-  margin-left: 200px;
-}
-
-.header__service-home {
-  font-weight: 600;
-  color: var(--text-dark-color);
-  padding: 0 14px;
-}
-
-.header__service-exp {
-  padding: 14px;
-  color: var(--text-light-color);
 }
 
 .header__service-exp:hover,
@@ -105,9 +88,26 @@ header {
 /* Search bar */
 .header__search {
   display: flex;
-  width: 100%;
-  justify-content: center;
-  padding-top: 80px;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 30px;
+}
+
+.header__service {
+  font-size: 1.6rem;
+  margin-bottom: 34px;
+  z-index: 3;
+}
+
+.header__service-home {
+  font-weight: 600;
+  color: var(--text-dark-color);
+  padding: 0 14px;
+}
+
+.header__service-exp {
+  padding: 14px;
+  color: var(--text-light-color);
 }
 
 .search__bar {
@@ -117,6 +117,7 @@ header {
   border: solid 1px var(--border-color);
   border-radius: 50px;
   box-shadow: 0 3px 5px rgba(0, 0, 0, 0.3);
+  margin: 0 40px;
 }
 
 .search__bar:has(input:focus) {
@@ -150,12 +151,16 @@ header {
   justify-content: center;
   align-items: baseline;
   height: 100%;
-  padding: 12px 32px;
+  padding: 12px 20px;
   margin: 0;
   position: relative;
   border-radius: 35px;
   border: none;
   background-color: #fff;
+}
+
+.search__place{
+  padding: 0 50px 0 30px;
 }
 
 .search__guess {
@@ -174,7 +179,7 @@ header {
   display: flex;
   flex-direction: column;
   align-items: baseline;
-  padding-right: 90px;
+  padding-right: 80px;
 }
 
 .search__place::after,
@@ -195,10 +200,6 @@ header {
   cursor: pointer;
 }
 
-.search__place {
-  padding-right: 100px;
-}
-
 .search__check-in {
 }
 
@@ -213,8 +214,8 @@ header {
 }
 
 .search__icon {
-  width: 46px;
-  height: 46px;
+  width: 40px;
+  height: 40px;
   padding: 16px;
   color: #fff;
   background-color: var(--main-color);
@@ -222,20 +223,24 @@ header {
   margin-right: 10px;
   font-size: 1.6rem;
   display: flex;
+  justify-content: center;
   align-items: center;
   float: right;
 }
 
 .search--title {
+  min-width: 70px;
   display: block;
-  font-size: 1.4rem;
+  text-align: left;
+  font-size: 1.2rem;
   line-height: 1.6rem;
   color: var(--text-dark-color);
+  width: fit-content;
 }
 
 .search--text {
   display: block;
-  font-size: 1.6rem;
+  font-size: 1.2rem;
   line-height: 1.8rem;
   color: var(--text-light-color);
 }
@@ -243,7 +248,7 @@ header {
 #search__place--text {
   border: none;
   padding: 0;
-  font-size: 1.6rem;
+  font-size: 1.2rem;
 }
 
 #search__place--text:focus {
